package conway;

abstract class Board {
  /**
   * Prints the board to the console.
   */
  abstract void printBoard();

  /**
   * Simulates one iteration of the game.
   */
  abstract void simulate();
}