package conway;

abstract class Cell {
  /**
   * Switches the state of the cell.
   */
  abstract void switchState();
}
