package conway;

public enum CellState {
    ALIVE,
    DEAD
}
