@startuml

class Conway {
  + initializeGame(args: String[])
  + run()
}

abstract Cell {
  + isStateSwitching(): Boolean
  + switchState()
}

abstract Board {
  + printBoard()
  + simulate()
}

abstract GameArguments{
	+ loadArguments()
}
Class Position {
  - x: int
  - y: int
}

enum CellState {
  ALIVE
  DEAD
}

class ConwayCell {
  + isStateSwitching(): Boolean
  + switchState()
}

class ConwayBoard {
  - cells: ConwayCell[][]
  + printBoard()
  + simulate()
  + getNeighborCellState(cell: Cell): Cell[]
}


class ConwayGameArguments{
	+ loadArguments()
}

Conway *--> ConwayBoard
Conway *--> ConwayGameArguments
Cell <|-- ConwayCell
Board <|-- ConwayBoard
GameArguments <|-- ConwayGameArguments
ConwayBoard --> ConwayGameArguments
ConwayBoard *--> "1..*" ConwayCell
ConwayCell --> Position
ConwayCell --> CellState

@enduml
